EVALSYS-1358 Fixed compact layout issue
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@81462 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1851,9 +1851,12 @@ table.tablesorter th.header.headerSortDown {
 .evaluation .scale .matrix .matrixRadioItems-5 {
   min-width: 60px;
 }
+.evaluation .scale .compact {
+  overflow: hidden;
+}
 .evaluation .scale .compact .title {
   float: left;
-  width: auto !important;
+  width: 60% !important;
   margin-top: 6px;
 }
 .evaluation .scale .compact .content {
